--- a/openotog/public/index.html
+++ b/openotog/public/index.html
@@ -8,8 +8,6 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="Header"></div>
-    <div id="Body"></div>
-    <div id="Footer"></div>
+    <div id="React"></div>
   </body>
 </html>
