--- a/openotog/public/index.html
+++ b/openotog/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React-Bootstrap CodeSandbox Starter</title>
+    <title>openOTOG</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/logoIOS.png">
   </head>
 
   <body>
